// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<div
  class="FieldGroup"
  data-test-id="cf-ui-field-group"
>
  <div
    class="FieldGroup__item"
  >
    <div
      class="ControlledInputField"
      data-test-id="cf-ui-checkbox-field"
    >
      <div
        class="Checkbox ControlledInputField__input"
      >
        <input
          aria-label="Do you agree?"
          class="ControlledInput"
          data-test-id="cf-ui-controlled-input"
          id="agree"
          type="checkbox"
          value=""
        />
        <label
          class="Input__ghost Checkbox__ghost"
          for="agree"
        >
          <svg
            class="Icon Icon--medium Icon--white"
            data-test-id="cf-ui-icon"
            height="1em"
            viewBox="0 0 18 18"
            width="1em"
          >
            <path
              d="M15.5303 3.96967C15.8232 4.26256 15.8232 4.73744 15.5303 5.03033L7.28033 13.2803C7.13968 13.421 6.94891 13.5 6.75 13.5C6.55109 13.5 6.36032 13.421 6.21967 13.2803L2.46967 9.53033C2.17678 9.23744 2.17678 8.76256 2.46967 8.46967C2.76256 8.17678 3.23744 8.17678 3.53033 8.46967L6.75 11.6893L14.4697 3.96967C14.7626 3.67678 15.2374 3.67678 15.5303 3.96967Z"
            />
          </svg>
        </label>
      </div>
      <div
        class="Checkbox__label-wrapper"
      >
        <label
          class="FormLabel ControlledInputField__label"
          data-test-id="cf-ui-form-label"
          for="agree"
        >
          Do you agree?
        </label>
        <p
          class="HelpText ControlledInputField__help-text"
          data-test-id="cf-ui-help-text"
        >
          Click if you agree
        </p>
      </div>
    </div>
  </div>
  <div
    class="FieldGroup__item"
  >
    <div
      class="ControlledInputField"
      data-test-id="cf-ui-checkbox-field"
    >
      <div
        class="Checkbox ControlledInputField__input"
      >
        <input
          aria-label="Do you really agree?"
          class="ControlledInput"
          data-test-id="cf-ui-controlled-input"
          id="reallyAgree"
          type="checkbox"
          value=""
        />
        <label
          class="Input__ghost Checkbox__ghost"
          for="reallyAgree"
        >
          <svg
            class="Icon Icon--medium Icon--white"
            data-test-id="cf-ui-icon"
            height="1em"
            viewBox="0 0 18 18"
            width="1em"
          >
            <path
              d="M15.5303 3.96967C15.8232 4.26256 15.8232 4.73744 15.5303 5.03033L7.28033 13.2803C7.13968 13.421 6.94891 13.5 6.75 13.5C6.55109 13.5 6.36032 13.421 6.21967 13.2803L2.46967 9.53033C2.17678 9.23744 2.17678 8.76256 2.46967 8.46967C2.76256 8.17678 3.23744 8.17678 3.53033 8.46967L6.75 11.6893L14.4697 3.96967C14.7626 3.67678 15.2374 3.67678 15.5303 3.96967Z"
            />
          </svg>
        </label>
      </div>
      <div
        class="Checkbox__label-wrapper"
      >
        <label
          class="FormLabel ControlledInputField__label"
          data-test-id="cf-ui-form-label"
          for="reallyAgree"
        >
          Do you really agree?
        </label>
        <p
          class="HelpText ControlledInputField__help-text"
          data-test-id="cf-ui-help-text"
        >
          Click if you really agree
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the component children in a row 1`] = `
<div
  class="FieldGroup my-extra-class FieldGroup--row"
  data-test-id="cf-ui-field-group"
>
  <div
    class="FieldGroup__item"
  >
    <div
      class="ControlledInputField"
      data-test-id="cf-ui-checkbox-field"
    >
      <div
        class="Checkbox ControlledInputField__input"
      >
        <input
          aria-label="Do you agree?"
          class="ControlledInput"
          data-test-id="cf-ui-controlled-input"
          id="agree"
          type="checkbox"
          value=""
        />
        <label
          class="Input__ghost Checkbox__ghost"
          for="agree"
        >
          <svg
            class="Icon Icon--medium Icon--white"
            data-test-id="cf-ui-icon"
            height="1em"
            viewBox="0 0 18 18"
            width="1em"
          >
            <path
              d="M15.5303 3.96967C15.8232 4.26256 15.8232 4.73744 15.5303 5.03033L7.28033 13.2803C7.13968 13.421 6.94891 13.5 6.75 13.5C6.55109 13.5 6.36032 13.421 6.21967 13.2803L2.46967 9.53033C2.17678 9.23744 2.17678 8.76256 2.46967 8.46967C2.76256 8.17678 3.23744 8.17678 3.53033 8.46967L6.75 11.6893L14.4697 3.96967C14.7626 3.67678 15.2374 3.67678 15.5303 3.96967Z"
            />
          </svg>
        </label>
      </div>
      <div
        class="Checkbox__label-wrapper"
      >
        <label
          class="FormLabel ControlledInputField__label"
          data-test-id="cf-ui-form-label"
          for="agree"
        >
          Do you agree?
        </label>
        <p
          class="HelpText ControlledInputField__help-text"
          data-test-id="cf-ui-help-text"
        >
          Click if you agree
        </p>
      </div>
    </div>
  </div>
  <div
    class="FieldGroup__item"
  >
    <div
      class="ControlledInputField"
      data-test-id="cf-ui-checkbox-field"
    >
      <div
        class="Checkbox ControlledInputField__input"
      >
        <input
          aria-label="Do you really agree?"
          class="ControlledInput"
          data-test-id="cf-ui-controlled-input"
          id="reallyAgree"
          type="checkbox"
          value=""
        />
        <label
          class="Input__ghost Checkbox__ghost"
          for="reallyAgree"
        >
          <svg
            class="Icon Icon--medium Icon--white"
            data-test-id="cf-ui-icon"
            height="1em"
            viewBox="0 0 18 18"
            width="1em"
          >
            <path
              d="M15.5303 3.96967C15.8232 4.26256 15.8232 4.73744 15.5303 5.03033L7.28033 13.2803C7.13968 13.421 6.94891 13.5 6.75 13.5C6.55109 13.5 6.36032 13.421 6.21967 13.2803L2.46967 9.53033C2.17678 9.23744 2.17678 8.76256 2.46967 8.46967C2.76256 8.17678 3.23744 8.17678 3.53033 8.46967L6.75 11.6893L14.4697 3.96967C14.7626 3.67678 15.2374 3.67678 15.5303 3.96967Z"
            />
          </svg>
        </label>
      </div>
      <div
        class="Checkbox__label-wrapper"
      >
        <label
          class="FormLabel ControlledInputField__label"
          data-test-id="cf-ui-form-label"
          for="reallyAgree"
        >
          Do you really agree?
        </label>
        <p
          class="HelpText ControlledInputField__help-text"
          data-test-id="cf-ui-help-text"
        >
          Click if you really agree
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the component with an additional class name 1`] = `
<div
  class="FieldGroup my-extra-class"
  data-test-id="cf-ui-field-group"
>
  <div
    class="FieldGroup__item"
  >
    <div
      class="ControlledInputField"
      data-test-id="cf-ui-checkbox-field"
    >
      <div
        class="Checkbox ControlledInputField__input"
      >
        <input
          aria-label="Do you agree?"
          class="ControlledInput"
          data-test-id="cf-ui-controlled-input"
          id="agree"
          type="checkbox"
          value=""
        />
        <label
          class="Input__ghost Checkbox__ghost"
          for="agree"
        >
          <svg
            class="Icon Icon--medium Icon--white"
            data-test-id="cf-ui-icon"
            height="1em"
            viewBox="0 0 18 18"
            width="1em"
          >
            <path
              d="M15.5303 3.96967C15.8232 4.26256 15.8232 4.73744 15.5303 5.03033L7.28033 13.2803C7.13968 13.421 6.94891 13.5 6.75 13.5C6.55109 13.5 6.36032 13.421 6.21967 13.2803L2.46967 9.53033C2.17678 9.23744 2.17678 8.76256 2.46967 8.46967C2.76256 8.17678 3.23744 8.17678 3.53033 8.46967L6.75 11.6893L14.4697 3.96967C14.7626 3.67678 15.2374 3.67678 15.5303 3.96967Z"
            />
          </svg>
        </label>
      </div>
      <div
        class="Checkbox__label-wrapper"
      >
        <label
          class="FormLabel ControlledInputField__label"
          data-test-id="cf-ui-form-label"
          for="agree"
        >
          Do you agree?
        </label>
        <p
          class="HelpText ControlledInputField__help-text"
          data-test-id="cf-ui-help-text"
        >
          Click if you agree
        </p>
      </div>
    </div>
  </div>
  <div
    class="FieldGroup__item"
  >
    <div
      class="ControlledInputField"
      data-test-id="cf-ui-checkbox-field"
    >
      <div
        class="Checkbox ControlledInputField__input"
      >
        <input
          aria-label="Do you really agree?"
          class="ControlledInput"
          data-test-id="cf-ui-controlled-input"
          id="reallyAgree"
          type="checkbox"
          value=""
        />
        <label
          class="Input__ghost Checkbox__ghost"
          for="reallyAgree"
        >
          <svg
            class="Icon Icon--medium Icon--white"
            data-test-id="cf-ui-icon"
            height="1em"
            viewBox="0 0 18 18"
            width="1em"
          >
            <path
              d="M15.5303 3.96967C15.8232 4.26256 15.8232 4.73744 15.5303 5.03033L7.28033 13.2803C7.13968 13.421 6.94891 13.5 6.75 13.5C6.55109 13.5 6.36032 13.421 6.21967 13.2803L2.46967 9.53033C2.17678 9.23744 2.17678 8.76256 2.46967 8.46967C2.76256 8.17678 3.23744 8.17678 3.53033 8.46967L6.75 11.6893L14.4697 3.96967C14.7626 3.67678 15.2374 3.67678 15.5303 3.96967Z"
            />
          </svg>
        </label>
      </div>
      <div
        class="Checkbox__label-wrapper"
      >
        <label
          class="FormLabel ControlledInputField__label"
          data-test-id="cf-ui-form-label"
          for="reallyAgree"
        >
          Do you really agree?
        </label>
        <p
          class="HelpText ControlledInputField__help-text"
          data-test-id="cf-ui-help-text"
        >
          Click if you really agree
        </p>
      </div>
    </div>
  </div>
</div>
`;
